--- a/views/pages/accommodation.ejs
+++ b/views/pages/accommodation.ejs
@@ -10,15 +10,30 @@
         <%- include('../partials/side-nav-bar'); %>
         <!-- top-nav-bar.ejs -->
         <%- include('../partials/top-nav-bar'); %>
-
-        <div id="places-and-landmarks1">
-            <div class="transparent-background-title">
-                <div id="places-and-landmarks11">
-                    <p class="font-white" id="title">ACCOMMODATION</p>
+        <div id="accommodation-header">
+            <div id="transparent-background-accommodation">
+                <div id="accommodation-header-group">
+                    <p class="font-white" id="second-title">ACCOMMODATION</p>
+                    <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf
+                        parchment wingardium.
+                        Wand betrayal parseltongue soul detention elf lion back his.
+                        Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes.
+                        Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva.
+                        Bat forbidden cabbage parchment sunshine.
+                        Bag moon ground moon quidditch sight grim.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div id="accommodation-body">
+            <div id="accommodation-body-group">
+                <div id="body-header">
+                    <p class="font-black" id="third-title">ACCOMMODATION</p>
                     <div class="filter-row">
-                        <p class="font-white">Sort By:</p>
+                        <p class="font-black">Sort By:</p>
                         <button>Name</button>
                         <button>Type</button>
+                        <button>Rating</button>
                     </div>
                     <!-- Just a dummy to show -->
                     <div id="wrap">
