--- a/views/pages/change-pass.ejs
+++ b/views/pages/change-pass.ejs
@@ -16,13 +16,13 @@
         <div id="form-row">
             <div class="form-center-left">
                 <div class="group">
-                    <p class="font-peach" id="title">Welcome!</p>
-                    <p class="font-white" id="content">Login to your account</p>
+                    <p class="font-peach" id="title">Hi!</p>
+                    <p class="font-white" id="content">Change your password!</p>
                 </div>
             </div>
             <div class="form-center-right">
-                <form action="/login" method="post">
-                    <%- include('../partials/login-form'); %>
+                <form action="/change-pass" method="post">
+                    <%- include('../partials/change-pass-form'); %>
                 </form>
             </div>
         </div>
