--- a/views/pages/festivals.ejs
+++ b/views/pages/festivals.ejs
@@ -16,9 +16,9 @@
     <%- include('../partials/side-nav-bar'); %>
         <!-- top-nav-bar.ejs -->
         <%- include('../partials/top-nav-bar'); %>
-            <div id="culturebg">
-                <div class="transparent-background">
-                    <div id="home11">
+            <div id="festivals-header">
+                <div id="transparent-background-festivals">
+                    <div id="festivals-header-group">
                         <p class="font-white" id="second-title">CULTURES AND FESTIVALS </p>
                         <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf
                             parchment wingardium.
@@ -31,8 +31,8 @@
                     </div>
                 </div>
             </div>
-            <div id="culture-and-festivals1">
-                <div id="homebackground">
+            <div id="festivals-body">
+                <div id="festivals-body-group">
                     <div id="body-header">
                         <p class="font-black" id="third-title">THE BEST EVENTS IN <span class="font-peach">ILOILO</span>
                         </p>
@@ -52,7 +52,6 @@
                                             <%- include('../partials/dummyfood'); %>
                     </div>
                 </div>
-            </div>
             </div>
 </body>
 
