--- a/views/pages/places-and-landmarks.ejs
+++ b/views/pages/places-and-landmarks.ejs
@@ -12,10 +12,10 @@
     <%- include('../partials/side-nav-bar'); %>
         <!-- top-nav-bar.ejs -->
         <%- include('../partials/top-nav-bar'); %>
-            <div id="food-header">
-                <div id="transparent-background-food">
-                    <div id="food-header-group">
-                        <p class="font-white" id="second-title">Places and Landmarks</p>
+            <div id="p-a-l-header">
+                <div id="transparent-background-p-a-l">
+                    <div id="p-a-l-header-group">
+                        <p class="font-white" id="second-title">PLACES AND LANDMARKS</p>
                         <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf
                             parchment wingardium.
                             Wand betrayal parseltongue soul detention elf lion back his.
@@ -28,8 +28,8 @@
                 </div>
             </div>
 
-            <div id="food-body">
-                <div id="food-body-group">
+            <div id="p-a-l-body">
+                <div id="p-a-l-body-group">
                     <div id="body-header">
                         <p class="font-black" id="third-title">Places You Must <span class="font-peach">Visit</span></p>
                         <div class="filter-row">
