--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -12,15 +12,15 @@
     <!-- side-nav-bar.ejs -->
     <!-- top-nav-bar.ejs -->
 
-    <div class="uin-background">
-        <div id="row">
-            <div class="uin-center-left">
+    <div class="form-background">
+        <div id="form-row">
+            <div class="form-center-left">
                 <div class="group">
                     <p class="font-peach" id="title">Welcome!</p>
                     <p class="font-white" id="content">Create a new account</p>
                 </div>
             </div>
-            <div class="uin-center-right">
+            <div class="form-center-right">
                 <form action="/register" method="post">
                     <%- include('../partials/registration-form'); %>
                 </form>
