--- a/views/pages/places-and-landmarks.ejs
+++ b/views/pages/places-and-landmarks.ejs
@@ -38,11 +38,11 @@
                             <button>Date</button>
                         </div>
                         <!-- Just a dummy to show -->
-                        <div id="wrap">
-                            <%- include('../partials/dummyfood'); %>
-                                <%- include('../partials/dummyfood'); %>
-                                    <%- include('../partials/dummyfood'); %>
-                                        <%- include('../partials/dummyfood'); %>
+                        <div id="wraphorizontal">
+                            <%- include('../partials/dummyhorizontal'); %>
+                            <%- include('../partials/dummyhorizontal'); %>
+                            <%- include('../partials/dummyhorizontal'); %>
+                            <%- include('../partials/dummyhorizontal'); %>
                         </div>
                     </div>
                 </div>
