--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -17,7 +17,7 @@
                 <div id="userheader">
                     <div id="userheadergroup">
                         <p class="font-white">Hi, <%= username %>!</p>
-                        <a>
+                        <a href = "/change-pass">
                             <p class="font-white">Change Password?</p>
                         </a>
                     </div>
