--- a/views/partials/change-pass-form.ejs
+++ b/views/partials/change-pass-form.ejs
@@ -1,6 +1,5 @@
-<label for="username" class="font-black" id="content">Username:</label><br>
-<input type="text" id="username" name="username" required><br>
-<!-- REMOVED EMAIL FIELD-->
+<label for="currentPass" class="font-black" id="content">Current Password:</label><br>
+<input type="password" id="currentPass" name="currentPass" required><br>
 <label for="password" class="font-black" id="content">New Password:</label><br>
 <input type="password" id="password" name="password" required><br>
 <label for="repassword" class="font-black" id="content">Confirm New Password:</label><br>
